# Classface

./: .gitignore  CHANGELOG.md  Makefile  README.md  TODO.md  main.py  procedures.md  pyproject.toml
.github/: copilot-instructions.md
data/raw/: lfw_filtered.json
doc/: phase1-dataset.md  phase1-preprocess.md
docs/: phase1-dataset.md  phase1-preprocess.md  phase2-segmentation.md
scripts/: eval_segmentation.py  preprocess.py  segment_face.py  segment_skin.py  validate_segmentation.py  vis_preprocess.py
tools/: prepare_dataset.py  preprocess.py
