[project]
name = "dip"
version = "0.1.0"
description = "遮挡人脸识别 — 数字图像处理课设"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "insightface>=0.7.3",
    "matplotlib>=3.9.0",
    "mediapipe>=0.10.0",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "onnxruntime>=1.19.0",
    "pillow>=12.1.1",
]

# 本项目为脚本式课设项目，不作为可安装包发布
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: flake8-bugbear
select = ["E", "W", "F", "I", "UP", "B"]
ignore = [
    "E501",  # line too long（由 line-length 控制，不重复报告）
]
